--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>The HTML5 Herald</title>
+  <title>Appealing Names</title>
   <meta name="description" content="Appealing Names Landing page">
   <meta name="Appealing Names" content="Domains for sale">
 
