--- a/index.html
+++ b/index.html
@@ -16,26 +16,24 @@
 <br>
   <p>We sell quality domains at affordable prices. We are currently offering the following domains for sale. Contact us at <strong>AppealingNames@gmail.com</strong> to make an inquiry.</p>
 
-<p>aerospacetrends.com</p>
+<p>Aerospacetrends.com</p>
 
-<p>appealingnames.com <em>(This is the website for the Twitter account.)</em></p>
+<p>Bestbusinesschecking.com</p>
 
-<p>bestbusinesschecking.com</p>
+<p>Clickscompany.com</p>
 
-<p>clickscompany.com</p>
+<p>Healthdealers.com</p>
 
-<p>healthdealers.com</p>
+<p>Indischesessen.com</p>
 
-<p>indischesessen.com</p>
+<p>Rpgspiele.com</p>
 
-<p>rpgspiele.com</p>
+<p>Satstest.com</p>
 
-<p>satstest.com</p>
+<p>Superbdomainnames.com</p>
 
-<p>superbdomainnames.com</p>
+<p>Theadcorp.com</p>
 
-<p>theadcorp.com</p>
-
-<p>themarketingcorp.com</p>
+<p>Themarketingcorp.com</p>
 </body>
 </html>
