--- a/index.html
+++ b/index.html
@@ -16,24 +16,24 @@
 <br>
   <p>We sell quality domains at affordable prices. We are currently offering the following domains for sale. Contact us at <strong>AppealingNames@gmail.com</strong> to make an inquiry.</p>
 
-<p>Aerospacetrends.com</p>
+<p>AerospaceTrends.com</p>
 
-<p>Bestbusinesschecking.com</p>
+<p>BestBusinessChecking.com</p>
 
-<p>Clickscompany.com</p>
+<p>ClicksCompany.com</p>
 
-<p>Healthdealers.com</p>
+<p>HealthDealers.com</p>
 
 <p>Indischesessen.com</p>
 
-<p>Rpgspiele.com</p>
+<p>RpgSpiele.com</p>
 
-<p>Satstest.com</p>
+<p>SatsTest.com</p>
 
-<p>Superbdomainnames.com</p>
+<p>SuperbDomainNames.com</p>
 
-<p>Theadcorp.com</p>
+<p>TheadCorp.com</p>
 
-<p>Themarketingcorp.com</p>
+<p>TheMarketingCorp.com</p>
 </body>
 </html>
