--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <p>SuperbDomainNames.com</p>
   <p>SuperbDomainNames.com  auctioning now at ebay. No reserve. start $450. Great brand for domainers.  </p>
-  <p><a href="http://www.ebay.com/itm/SuperbDomainNames-com-great-for-domainers-Start-450-No-reserve/122482662685"></a>http://www.ebay.com/itm/SuperbDomainNames-com-great-for-domainers-Start-450-No-reserve/122482662685</p>
+  <p><a href="http://www.ebay.com/itm/SuperbDomainNames-com-great-for-domainers-Start-450-No-reserve/122482662685">http://www.ebay.com/itm/SuperbDomainNames-com-great-for-domainers-Start-450-No-reserve/122482662685</a></p>
 
 <p>TheAdCorp.com</p>
 
