--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 <p>SatsTest.com</p>
 
 <p>SuperbDomainNames.com</p>
-  <p>SuperbDomainNames.com  auctioning now at ebay. No reserve. start $450. Great brand for domainers.  </p>
-  <p><a href="http://www.ebay.com/itm/SuperbDomainNames-com-great-for-domainers-Start-450-No-reserve/122482662685">http://www.ebay.com/itm/SuperbDomainNames-com-great-for-domainers-Start-450-No-reserve/122482662685</a></p>
+  <p><em>SuperbDomainNames.com  auctioning now at ebay. No reserve. start $450. Great brand for domainers.  </em></p>
+  <p><em><a href="http://www.ebay.com/itm/SuperbDomainNames-com-great-for-domainers-Start-450-No-reserve/122482662685">http://www.ebay.com/itm/SuperbDomainNames-com-great-for-domainers-Start-450-No-reserve/122482662685</a></em></p>
 
 <p>TheAdCorp.com</p>
 
